// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Engine Will default a user ID if none are provided 1`] = `
Object {
  "id": "my-test-schema",
  "respondedAt": "2015-06-14T22:13:45.275Z",
  "results": Array [
    Object {
      "choice": 2,
      "id": "tacobell",
    },
    Object {
      "choice": 1,
      "id": "pizza",
    },
    Object {
      "choice": 3,
      "id": "inout",
    },
    Object {
      "choice": 2,
      "id": "tacobell2",
    },
    Object {
      "choice": 1,
      "id": "pizza2",
    },
    Object {
      "choice": 3,
      "id": "inout2",
    },
  ],
  "userId": "hashValue",
}
`;

exports[`Engine Will output CSV 1`] = `
"# Survey ID: my-test-schema
# Responded at: 2015-06-14T22:13:45.275Z
# User: test-user
promptId, result
tacobell, 2
pizza, 1
inout, 3
tacobell2, 2
pizza2, 1
inout2, 3"
`;

exports[`Engine Will output JSON 1`] = `"{\\"id\\":\\"my-test-schema\\",\\"userId\\":\\"test-user\\",\\"respondedAt\\":\\"2015-06-14T22:13:45.275Z\\",\\"results\\":[{\\"id\\":\\"tacobell\\",\\"choice\\":2},{\\"id\\":\\"pizza\\",\\"choice\\":1},{\\"id\\":\\"inout\\",\\"choice\\":3},{\\"id\\":\\"tacobell2\\",\\"choice\\":2},{\\"id\\":\\"pizza2\\",\\"choice\\":1},{\\"id\\":\\"inout2\\",\\"choice\\":3}]}"`;

exports[`Engine Will run a scale-based survey 1`] = `
Object {
  "id": "my-test-schema",
  "respondedAt": "2015-06-14T22:13:45.275Z",
  "results": Array [
    Object {
      "choice": 2,
      "id": "tacobell",
    },
    Object {
      "choice": 1,
      "id": "pizza",
    },
    Object {
      "choice": 3,
      "id": "inout",
    },
    Object {
      "choice": 2,
      "id": "tacobell2",
    },
    Object {
      "choice": 1,
      "id": "pizza2",
    },
    Object {
      "choice": 3,
      "id": "inout2",
    },
  ],
  "userId": "test-user",
}
`;

exports[`Engine will default to raw json if no output is provided 1`] = `
Object {
  "id": "my-test-schema",
  "respondedAt": "2015-06-14T22:13:45.275Z",
  "results": Array [
    Object {
      "choice": 2,
      "id": "tacobell",
    },
    Object {
      "choice": 1,
      "id": "pizza",
    },
    Object {
      "choice": 3,
      "id": "inout",
    },
    Object {
      "choice": 2,
      "id": "tacobell2",
    },
    Object {
      "choice": 1,
      "id": "pizza2",
    },
    Object {
      "choice": 3,
      "id": "inout2",
    },
  ],
  "userId": "test-user",
}
`;
